--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "dom-parser-react": "^0.3.0",
+    "marked": "^15.0.4",
     "motion": "^11.13.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
